More code to fix formatting and whitespace problems with the background image

--- a/LESS/global.less
+++ b/LESS/global.less
@@ -41,7 +41,7 @@
       background-image: url("../image/Background.PNG"), url("../image/Sides.PNG");
       background-size: contain, contain 100vh;
       background-position: top, top;
-      background-repeat: no-repeat, repeat;
+      background-repeat: no-repeat, round;
   
       @media @imageChange{
           background-image:none;
