--- a/css/index.css
+++ b/css/index.css
@@ -229,7 +229,7 @@ body {
   background-image: url("../image/Background.PNG"), url("../image/Sides.PNG");
   background-size: contain, contain 100vh;
   background-position: top, top;
-  background-repeat: no-repeat, repeat;
+  background-repeat: no-repeat, round;
 }
 @media (max-width: 1350px) {
   body {
